fixed alignment of button

--- a/src/front/styles/carouselCard.css
+++ b/src/front/styles/carouselCard.css
@@ -33,7 +33,8 @@
   cursor: pointer;
   margin: 20px;
   height: 55px;
-  text-align:center;
+  text-align:start !important;
+  padding-top: 15px;
   border: none;
   background-size: 300% 100%;
   border-radius: 50px;
